projects/sandbox/deployment/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metis-sandbox-ui-ingress-test
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
    - hosts:
        - metis-sandbox.test.eanadev.org
      secretName: metis-sandbox.test.eanadev.org
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metis-sandbox-ui-service-test
                port:
                  number: 8080
