projects/sandbox/deployment/test/sandbox-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sandbox-ui-service-test
  name: sandbox-ui-service-test
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: sandbox-ui-test
  type: ClusterIP
