projects/sandbox/deployment/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metis-sandbox-ui-service-test
  name: metis-sandbox-ui-service-test
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: metis-sandbox-ui-test
  type: ClusterIP
